fluxcd/infrastructure/configs/traefik/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: default
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backstage-backend
                port:
                  number: 7000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backstage-frontend
                port:
                  number: 8080
